# Gemini2md

./: .gitignore  ISSUES.md  README.md  main.py  markdown_enhancer.py  pyproject.toml  requirements.txt
.history/: main_20250618170740.py
.history/web/: viewer_20250618173455.html  viewer_20250618174237.html  viewer_20250618174618.html
example/: Google Gemini (18_6_2025 17：21：59).md
test_cases/: test_basic_conversion.py  test_nested_structures.py
web/: viewer.html
