[project]
name = "gemini2md"
version = "0.1.0"
description = ""
authors = [
    {name = "TuNombre"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = ["beautifulsoup4 (>=4.13.4,<5.0.0)", "html2text (>=2025.4.15,<2026.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"

